# Project_fenrirv2

./: .gitignore  README.md  fenrir.1  install_fenrir.sh  pyproject.toml  run.sh  update_fenrir.sh
fenrir/: cli.py  config.py  fenrir_gui.py  logging_config.py  report_manager.py
fenrir/modules/: dir_brute_forcer.py  dns_scanner.py  exploit_scanner.py  iot_scanner.py  mobile_scanner.py  osint_scanner.py  ot_scanner.py  password_sprayer.py  port_scanner.py  rf_scanner.py  subdomain_scanner.py  tech_detector.py  threat_intel_scanner.py  vulnerability_scanner.py  web_scanner.py  whois_scanner.py
